tests/core/negative/types/implicit_str_i64.vais
fn main() -> i64 {
    value: i64 := "not an int"
    return value
}
